# dafont-dl

./: README.md  dafont.sqlite3  download_db.py  extract_db.py  main.py  pyproject.toml  update_db.py
src/dafont_app/: __init__.py  __main__.py
src/dafont_app.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/dafont_app/db/: cache_repo.py  repo.py  schema.py  source_repo.py
src/dafont_app/models/: entities.py
src/dafont_app/services/: catalog.py  dafont_client.py  downloader.py  preview_offline.py  preview_tokens.py  simple_download.py  sync.py  updater.py
src/dafont_app/ui/: main_window.py  theme.py  workers.py
src/dafont_app/utils/: app_logging.py  paths.py  platform.py  preview.py  settings.py  system_theme.py  theme_utils.py
src/dafont_gui.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/db-sync/: download_db.py  extract_db.py  main.py  update_db.py
