[project]
name = "dafont-gui"
version = "1.0.0"
description = "Downloader e gerenciador de fontes do DaFont com cache local e interface Qt."
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Igor Bryan"}]
dependencies = [
  "PySide6>=6.7",
  "requests>=2.32",
  "beautifulsoup4>=4.12",
]

[project.scripts]
dafont-gui = "dafont_app.__main__:main"

[tool.ruff]
line-length = 100
