[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dafont_app"
version = "0.3.0"
description = "DaFont Downloader GUI (DB-synced)"
requires-python = ">=3.10"
dependencies = [
  "PySide6>=6.5",
  "requests>=2.31",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
